--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,135 @@
-.App {
-  text-align: center;
+.app{
+  display:flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  height: 100vh;
+  font-size: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.panel {
+  border: none;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 1px 4px rgba(0,0,0,0.3);
+  box-shadow: 0 1px 4px rgba(0,0,0,0.3);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.panel-heading {
+  border-bottom: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.panel-primary {
+  border-color: #2196f3;
+}
+
+.panel-primary>.panel-heading {
+  color: #ffffff;
+  background-color: #2196f3;
+  border-color: #2196f3;
+}
+
+.panel-heading {
+  padding: 10px 15px;
+  border-bottom: 1px solid transparent;
+  border-top-right-radius: 2px;
+  border-top-left-radius: 2px;
+}
+
+.panel-body {
+  padding: 15px;
+}
+
+.form-group {
+  margin-bottom: 0;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.nav{
+  flex-basis: 20%;
+}
+
+.messages-container{
+  flex-basis: 80%;
+  margin-bottom: 0;
+  height: 100vh;
+}
+
+.support, .users{
+  height: 50vh;
+  margin-bottom: 0;
+}
+
+.channels, .users, .messages{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.channels, .users{
+  height: 88%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.messages{
+  height: 94%;
+}
+
+.channels > ul, .messages > ul, .users > ul{
+  flex: 1;
+  overflow-y: auto;
+}
+
+.message > .author{
+  flex-basis: 100%;
+}
+
+.message > .body{
+  flex-basis: 100%;
+}
+
+.active {
+  background-color: #E8E8E8;
+}
+
+.timestamp{
+  color: #808080;
+  font-style: italic;
+  padding-left: 10px;
+  font-size: 13px;
+}
+
+.form-group{
+  margin-bottom: 0;
+}
+
+ul{
+  list-style-type:none;
+  padding: 0;
+}
+
+li{
+  padding: 0 4px 0 4px;
+}
+
+p {
+  margin: 0px;
+  margin-bottom: 5px;;
+}
+
+.channel-item{
+  cursor: pointer;
+  color: lightslategray;
 }
