--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,12 @@
   border-top-left-radius: 2px;
 }
 
+.panel-default>.panel-heading {
+  color: #212121;
+  background-color: #f5f5f5;
+  border-color: #dddddd;
+}
+
 .panel-body {
   padding: 15px;
 }
@@ -90,6 +96,10 @@
 .channels > ul, .messages > ul, .users > ul {
   flex: 1;
   overflow-y: auto;
+}
+
+.message {
+  margin-bottom: 10px;
 }
 
 .message > .author {
